# snakegameproject

./: .gitignore
private/scripts/: runserver.service  runserver.sh
private/server/: Cargo.toml  Rocket.toml
private/server/src/: db.rs  main.rs  models.rs
public/: index.html  main.js  pixi.html  pixi.js  server_communication.js  snake_game.js
