[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
diesel = "2"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_mysql"]
